build_error_5.log
[CLEAN] Removing old binaries...
Could Not Find C:\Users\krazy\Documents\GitHub\FantasyLloreAndWorldSimulator\bin\*.exe
[COPY] Copying shaders...
shaders\world.frag
shaders\world.vert
        2 file(s) copied.
[BUILD] Compiling Omnis Engine...
In file included from src/main.cpp:18:
src/visuals/MapRenderer.cpp:51:40: error: no member named 'colorR' in 'WorldBuffers'
   51 |       colorBuffer[i * 3 + 0] = buffers.colorR[i];
      |                                ~~~~~~~ ^
src/visuals/MapRenderer.cpp:52:40: error: no member named 'colorG' in 'WorldBuffers'
   52 |       colorBuffer[i * 3 + 1] = buffers.colorG[i];
      |                                ~~~~~~~ ^
src/visuals/MapRenderer.cpp:53:40: error: no member named 'colorB' in 'WorldBuffers'
   53 |       colorBuffer[i * 3 + 2] = buffers.colorB[i];
      |                                ~~~~~~~ ^
3 errors generated.
[ERROR] Build failed. Check the logs above.
Press any key to continue . . . 
Terminate batch job (Y/N)? Terminate batch job (Y/N)? 
